# unibot-main

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  README.md  alembic.ini  amvera.yml  auto_install_python311.ps1  auto_install_python311.py  check_generations_count.py  check_project.bat  check_python_version.py  config.yaml  create_venv_python311.py  do_install.py  download_python311.ps1  entrypoint.sh  execute_venv_creation.py  git_sync.md  install.py  install_python311.md  install_python311_direct.py  make_venv.py  pyproject.toml  quick_setup_venv.py  recreate_venv_python311.bat  requirements-dev.txt  requirements.txt  setup_database.py  setup_project.bat  setup_project.ps1  setup_python311.bat  setup_venv_now.py  test_project.py  ubrat_env_iz_istorii_i_push.ps1  verify_install.py  БЫСТРАЯ_УСТАНОВКА.py  ГОТОВО_К_УСТАНОВКЕ.md  ЗАПУСТИТЬ_БОТА.bat  (+14 more)
alembic/: env.py
alembic/versions/: 8ad87c1e31a1_add_admin_comment_to_users.py  965df8d6b696_initial_schema.py
docs/legal/: README.md  privacy_policy_template.md  terms_of_service_template.md
locales/: en.yaml  ru.yaml
src/: __init__.py  __main__.py  main.py
src/admin/: __init__.py  auth.py  setup.py  views.py
src/admin/templates/sqladmin/: _telegram_editor.html  broadcast_create.html  broadcast_edit.html  create.html  details.html  edit.html  layout.html  list.html  login.html
src/admin/templates/sqladmin/modals/: delete.html
src/api/: __init__.py  admin.py  health.py  root.py  telegram.py  webhooks.py
src/app/: __init__.py  factory.py  lifecycle.py
src/bot/: __init__.py  loader.py  setup.py  webhook.py
src/bot/commands/: __init__.py  registry.py
src/bot/handlers/: __init__.py  balance.py  buy.py  channel_subscription.py  chatgpt.py  clear.py  edit_image.py  error.py  fallback.py  generate.py  help.py  imagine.py  invite.py  language.py  postcard.py  settings.py  start.py  terms.py
src/bot/keyboards/: __init__.py
src/bot/keyboards/inline/: __init__.py  language.py  legal.py  models.py  payments.py
src/bot/middleware/: __init__.py  banned_user.py  channel_subscription.py  cooldown.py  language.py  legal_consent.py  private_chat.py
src/bot/states/: __init__.py  chatgpt.py  edit_image.py  generate.py  imagine.py  postcard.py
src/bot/static/: __init__.py
src/bot/utils/: __init__.py  billing.py  generation_cooldown.py
src/config/: __init__.py  constants.py  models.py  settings.py  yaml_config.py
src/core/: __init__.py  exceptions.py
src/db/: __init__.py  base.py  exceptions.py  migrations.py  models_base.py
src/db/models/: __init__.py  broadcast.py  generation.py  message.py  payment.py  referral.py  subscription.py  transaction.py  user.py
src/db/repositories/: __init__.py  broadcast_repo.py  generation_repo.py  message_repo.py  payment_repo.py  referral_repo.py  subscription_repo.py  transaction_repo.py  user_repo.py
src/providers/: __init__.py
src/providers/ai/: __init__.py  base.py  openai_provider.py  registry.py  replicate_provider.py
src/providers/payments/: __init__.py  base.py  stars.py  stripe.py  yookassa.py
src/scheduler/: __init__.py  runner.py  tasks.py
src/services/: __init__.py  ai_service.py  billing_service.py  broadcast_service.py  payment_service.py  referral_service.py  renewal_service.py  subscription_service.py
src/services/generation/: __init__.py  base.py  chat.py  image.py
src/utils/: __init__.py  i18n.py  logging.py  telegram.py  timezone.py
tests/: conftest.py
tests/api/: __init__.py  test_admin.py  test_telegram.py
tests/bot/: __init__.py  test_webhook.py
tests/bot/commands/: test_registry.py
tests/bot/handlers/: __init__.py  test_buy.py  test_chatgpt.py  test_clear.py  test_edit_image.py  test_error.py  test_fallback.py  test_help.py  test_imagine.py  test_invite.py  test_language.py  test_settings.py  test_start.py  test_terms.py
tests/bot/keyboards/: __init__.py  test_models.py
tests/bot/keyboards/inline/: __init__.py  test_legal.py
tests/bot/middleware/: __init__.py  test_channel_subscription.py  test_cooldown.py  test_language.py  test_legal_consent.py  test_private_chat.py
tests/bot/utils/: __init__.py  test_billing.py
tests/config/: __init__.py  test_app_settings.py  test_yaml_config.py
tests/db/: __init__.py  test_broadcast_repo.py  test_message_repository.py  test_user_repo.py  test_user_repo_segmentation.py
tests/providers/: __init__.py  test_openai_provider.py  test_registry.py
tests/providers/payments/: __init__.py  test_stars.py
tests/scheduler/: __init__.py  test_tasks.py
tests/services/: test_ai_service.py  test_billing_service.py  test_broadcast_service.py  test_broadcast_worker.py  test_generation_base.py  test_payment_service.py  test_referral_service.py
tests/utils/: __init__.py  test_i18n.py  test_telegram.py
